--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
               <div class="col-xs-12 col-sm-6 col-md-4"></div>
             </div>
           </div>
-          <div role="tabpanel" class="tab-pane fade" id="category_02">打到小日本</div>
+          <div role="tabpanel" class="tab-pane fade" id="category_02"></div>
           <div role="tabpanel" class="tab-pane fade" id="category_03">...</div>
           <div role="tabpanel" class="tab-pane fade" id="category_04">...</div>
           <div role="tabpanel" class="tab-pane fade" id="category_05">...</div>
